--- a/homework.html
+++ b/homework.html
@@ -7,13 +7,24 @@
     <link rel="stylesheet" href="ASSETS/font%20icons/fonts.css" type="text/css" />
 </head>
 <body>
-    <div CLASS="tab">
+    <div class="tab">
        <ul>
            <li><i class="icon-dashboard"></i><span>DASHBOARD</span></li>
-           <li><span>AGENT</span></li>
-           <li><span>MY CRUISE</span></li>
-           <li><span>HELP</span></li>
+           <li><i class="icon-sitemap"></i><span>AGENT</span></li>
+           <li><i class="icon-boat"></i><span>MYCRUISE</span></li>
+           <li><i class="icon-life-bouy"></i><span>HELP</span></li>
        </ul>
+        <div class="tab-down">
+            <h4>History</h4>
+            <ul>
+                <li>asdbxcvasda-01/Aadasdazc</li>
+                <li>asdbxcvasda-01/Aadasdazc</li>
+                <li>asdbxcvasda-01/Aadasdazc</li>
+                <li>asdbxcvasda-01/Aadasdazc</li>
+                <li>asdbxcvasda-01/Aadasdazc</li>
+                <li>asdbxcvasda-01/Aadasdazc</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
